--- a/BioadresarAndroid/res/layout/edit_contact.xml
+++ b/BioadresarAndroid/res/layout/edit_contact.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/editContact"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background" >
@@ -50,7 +51,7 @@
                 android:hint="@string/web" />
 
             <EditText
-                android:id="@+id/e-shop"
+                android:id="@+id/eshop"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
                 android:hint="@string/eshop" />
@@ -76,7 +77,7 @@
                 android:src="@drawable/list_spacer" />
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/nextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:layout_gravity="center_vertical|center_horizontal"
