--- a/BioadresarAndroid/res/layout/main_menu.xml
+++ b/BioadresarAndroid/res/layout/main_menu.xml
@@ -31,7 +31,7 @@
         android:layout_margin="10dp"
         android:orientation="vertical" >
 
-        <ImageView
+        <ImageButton
             android:id="@+id/mapLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,11 +39,12 @@
             android:layout_margin="0dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:padding="0dp"
             android:scaleType="centerInside"
             android:src="@drawable/map" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/listLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,11 +52,12 @@
             android:layout_margin="0dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:padding="0dp"
             android:scaleType="centerInside"
             android:src="@drawable/list" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/bookmarkListLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,9 +65,23 @@
             android:layout_margin="0dp"
             android:layout_weight="0.1"
             android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
             android:padding="0dp"
             android:scaleType="centerInside"
             android:src="@drawable/bookmarks" />
+
+        <ImageButton
+            android:id="@+id/addFarmLink"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_margin="0dp"
+            android:layout_weight="0.1"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:padding="0dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/plus_button" />
     </LinearLayout>
 
 </LinearLayout>
