--- a/BioadresarAndroid/res/layout/list_view.xml
+++ b/BioadresarAndroid/res/layout/list_view.xml
@@ -29,6 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/search_background_green" />
 
     <ScrollView
@@ -36,6 +37,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/searchView"
+        android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp" >
 
