--- a/BioadresarAndroid/res/layout/edit_contact.xml
+++ b/BioadresarAndroid/res/layout/edit_contact.xml
@@ -22,7 +22,10 @@
                 android:id="@+id/city"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
-                android:hint="@string/city" >
+                android:hint="@string/city"
+                android:nextFocusDown="@+id/street"
+                android:nextFocusForward="@+id/street"
+                android:nextFocusRight="@+id/street" >
 
                 <requestFocus />
             </EditText>
@@ -31,42 +34,56 @@
                 android:id="@+id/street"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="match_parent"
-                android:hint="@string/street_with_number" />
-
-            <EditText
-                android:id="@+id/description"
-                style="@style/HnutiDuha.InputMedium"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="top|left"
-                android:hint="@string/description"
-                android:inputType="textMultiLine"
-                android:maxLines="4"
-                android:minLines="4" />
+                android:hint="@string/street_with_number"
+                android:nextFocusDown="@+id/web"
+                android:nextFocusForward="@+id/web"
+                android:nextFocusLeft="@+id/city"
+                android:nextFocusRight="@+id/web"
+                android:nextFocusUp="@+id/city" />
 
             <EditText
                 android:id="@+id/web"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
-                android:hint="@string/web" />
+                android:hint="@string/web"
+                android:nextFocusDown="@+id/eshop"
+                android:nextFocusForward="@+id/eshop"
+                android:nextFocusLeft="@+id/street"
+                android:nextFocusRight="@+id/eshop"
+                android:nextFocusUp="@+id/street" />
 
             <EditText
                 android:id="@+id/eshop"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
-                android:hint="@string/eshop" />
+                android:hint="@string/eshop"
+                android:nextFocusDown="@+id/mail"
+                android:nextFocusForward="@+id/mail"
+                android:nextFocusLeft="@+id/web"
+                android:nextFocusRight="@+id/mail"
+                android:nextFocusUp="@+id/web" />
 
             <EditText
                 android:id="@+id/mail"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
-                android:hint="@string/email" />
+                android:hint="@string/email"
+                android:nextFocusDown="@+id/phone"
+                android:nextFocusForward="@+id/phone"
+                android:nextFocusLeft="@+id/eshop"
+                android:nextFocusRight="@+id/phone"
+                android:nextFocusUp="@+id/eshop" />
 
             <EditText
                 android:id="@+id/phone"
                 style="@style/HnutiDuha.InputMedium"
                 android:layout_width="150dp"
-                android:hint="@string/phone" />
+                android:hint="@string/phone"
+                android:nextFocusDown="@+id/nextButton"
+                android:nextFocusForward="@+id/nextButton"
+                android:nextFocusLeft="@+id/mail"
+                android:nextFocusRight="@+id/nextButton"
+                android:nextFocusUp="@+id/mail" />
 
             <ImageView
                 android:id="@+id/spacer"
