edit contact traversal, add detail partly done

--- a/BioadresarAndroid/res/values/ids.xml
+++ b/BioadresarAndroid/res/values/ids.xml
@@ -3,5 +3,6 @@
 
     <item name="locationLabel" type="id"/>
     <item name="homeLink" type="id"/>
+    <item name="buttonTag" type="id"/>
 
 </resources>
