--- a/BioadresarAndroid/res/layout/edit_position.xml
+++ b/BioadresarAndroid/res/layout/edit_position.xml
@@ -17,8 +17,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:text="FIXME: typ objektu"
+            android:textAppearance="@style/HnutiDuha.HeaderMedium"
+            android:textColor="@color/White" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/farm_name"
-            android:textAppearance="@style/HnutiDuha.HeaderMedium" />
+            android:textAppearance="@style/HnutiDuha.HeaderMedium"
+            android:textColor="@color/White" />
 
         <EditText
             android:id="@+id/farmName"
@@ -51,7 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="@string/coordinates"
-                android:textAppearance="@style/HnutiDuha.HeaderMedium" />
+                android:textAppearance="@style/HnutiDuha.HeaderMedium"
+                android:textColor="@color/White" />
 
             <LinearLayout
                 android:layout_width="match_parent"
