--- a/BioadresarAndroid/res/layout/main_menu.xml
+++ b/BioadresarAndroid/res/layout/main_menu.xml
@@ -72,8 +72,8 @@
 
         <ImageButton
             android:id="@+id/addFarmLink"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="0dp"
             android:layout_weight="0.1"
@@ -81,7 +81,7 @@
             android:background="@android:color/transparent"
             android:padding="0dp"
             android:scaleType="fitXY"
-            android:src="@drawable/plus_button" />
+            android:src="@drawable/add_farm" />
     </LinearLayout>
 
 </LinearLayout>
