detail moved to fragment

--- a/BioadresarAndroid/res/values/ids.xml
+++ b/BioadresarAndroid/res/values/ids.xml
@@ -4,5 +4,6 @@
     <item name="locationLabel" type="id"/>
     <item name="homeLink" type="id"/>
     <item name="buttonTag" type="id"/>
+    <item name="fragmentContainer" type="id"/>
 
 </resources>
