--- a/BioadresarAndroid/res/layout/edit_details.xml
+++ b/BioadresarAndroid/res/layout/edit_details.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:bioadresar="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/editProducts"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/background" >
 
     <LinearLayout
+        android:id="@+id/editProducts"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
@@ -14,7 +14,9 @@
 
         <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="fill_parent"
+            android:layout_gravity="top"
+            android:layout_weight="0.9" >
 
             <LinearLayout
                 android:id="@+id/uberLayout"
@@ -132,23 +134,47 @@
                         android:id="@+id/containerPickupPlaces"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" >
+                        android:orientation="horizontal" >
 
                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="top|left"
+                            android:layout_marginRight="10dp"
                             android:text="@string/pickup"
                             android:textAppearance="@style/HnutiDuha.HeaderMedium" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical" >
+
+                            <LinearLayout
+                                android:id="@+id/pickupPlacesList"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical" >
+                            </LinearLayout>
+
+                            <ImageView
+                                android:id="@+id/addButton"
+                                android:layout_width="@dimen/btn_in_row_height"
+                                android:layout_height="@dimen/btn_in_row_height"
+                                android:layout_gravity="right"
+                                android:layout_margin="10dp"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/btn_plus" />
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
         <LinearLayout
+            android:id="@+id/navigationButtons"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="bottom"
+            android:layout_height="wrap_content"
             android:layout_weight="0.1"
             android:gravity="bottom"
             android:orientation="vertical" >
@@ -184,4 +210,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
