--- a/BioadresarAndroid/res/layout/edit_details.xml
+++ b/BioadresarAndroid/res/layout/edit_details.xml
@@ -97,37 +97,44 @@
                 </cz.hnutiduha.bioadresar.layout.FlowLayout>
 
                 <LinearLayout
-                    android:id="@+id/containersProvided"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/containersLabel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/containers"
-                        android:textAppearance="@style/HnutiDuha.HeaderMedium" />
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/containersLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" >
 
                     <LinearLayout
-                        android:id="@+id/customContainerDeliveryLayout"
+                        android:id="@+id/customDeliveryLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" >
+                        android:orientation="horizontal" >
 
                         <TextView
                             android:id="@+id/textView2"
-                            android:layout_width="wrap_content"
+                            android:layout_width="140dp"
                             android:layout_height="wrap_content"
-                            android:text="@string/customContainerDistribution"
-                            android:textAppearance="@style/HnutiDuha.HeaderMedium" />
+                            android:layout_gravity="top|left"
+                            android:text="@string/customDistribution"
+                            android:textAppearance="@style/HnutiDuha.HeaderMediumWhite" />
+
+                        <TextView
+                            android:id="@+id/customDeliveryYes"
+                            style="@style/HnutiDuha.ItemButtonMedium"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="right"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/btn_checkbox_unselected"
+                            android:gravity="right"
+                            android:text="@string/yes" />
+
+                        <TextView
+                            android:id="@+id/customDeliveryNo"
+                            style="@style/HnutiDuha.ItemButtonMedium"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="right"
+                            android:layout_marginRight="10dp"
+                            android:background="@drawable/btn_checkbox_selected"
+                            android:gravity="right"
+                            android:text="@string/no" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -138,12 +145,11 @@
 
                         <TextView
                             android:id="@+id/textView3"
-                            android:layout_width="wrap_content"
+                            android:layout_width="120dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="top|left"
-                            android:layout_marginRight="10dp"
-                            android:text="@string/pickup"
-                            android:textAppearance="@style/HnutiDuha.HeaderMedium" />
+                            android:text="@string/containerDistributionPlaces"
+                            android:textAppearance="@style/HnutiDuha.HeaderMediumWhite" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -155,6 +161,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical" >
+
+                                <!-- <include layout="@layout/edit_pickup_place" /> -->
                             </LinearLayout>
 
                             <ImageView
