--- a/BioadresarAndroid/res/values/themes.xml
+++ b/BioadresarAndroid/res/values/themes.xml
@@ -32,8 +32,16 @@
         <item name="android:textColor">@color/Black</item>
     </style>
 
+    <style name="HnutiDuha.TextMediumWhite" parent="@style/HnutiDuha.TextMedium">
+        <item name="android:textColor">@color/White</item>
+    </style>
+
     <style name="HnutiDuha.HeaderMedium" parent="@style/HnutiDuha.TextMedium">
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="HnutiDuha.HeaderMediumWhite" parent="@style/HnutiDuha.HeaderMedium">
+        <item name="android:textColor">@color/White</item>
     </style>
 
     <style name="HnutiDuha.InputMedium" parent="@style/HnutiDuha.TextMedium">
