--- a/BioadresarAndroid/res/layout/edit_contact.xml
+++ b/BioadresarAndroid/res/layout/edit_contact.xml
@@ -93,11 +93,24 @@
                     android:hint="@string/phone"
                     android:inputType="phone"
                     android:maxLines="1"
+                    android:nextFocusDown="@+id/contactPerson"
+                    android:nextFocusForward="@+id/contactPerson"
+                    android:nextFocusLeft="@+id/mail"
+                    android:nextFocusRight="@+id/contactPerson"
+                    android:nextFocusUp="@+id/mail" />
+
+                <EditText
+                    android:id="@+id/contactPerson"
+                    style="@style/HnutiDuha.InputMedium"
+                    android:layout_width="150dp"
+                    android:hint="@string/contactPerson"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
                     android:nextFocusDown="@+id/nextButton"
                     android:nextFocusForward="@+id/nextButton"
-                    android:nextFocusLeft="@+id/mail"
+                    android:nextFocusLeft="@+id/phone"
                     android:nextFocusRight="@+id/nextButton"
-                    android:nextFocusUp="@+id/mail" />
+                    android:nextFocusUp="@+id/phone" />
             </LinearLayout>
         </ScrollView>
 
