--- a/BioadresarAndroid/res/layout/edit_appendix.xml
+++ b/BioadresarAndroid/res/layout/edit_appendix.xml
@@ -89,7 +89,7 @@
 
             <ImageView
                 android:id="@+id/spacer"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="0dp"
