--- a/BioadresarAndroid/res/layout/edit_overview.xml
+++ b/BioadresarAndroid/res/layout/edit_overview.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <LinearLayout
         android:id="@+id/detailHolder"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_weight="0.9"
         android:gravity="top"
