--- a/BioadresarAndroid/res/values/themes.xml
+++ b/BioadresarAndroid/res/values/themes.xml
@@ -44,6 +44,10 @@
         <item name="android:textColor">@color/White</item>
     </style>
 
+    <style name="HnutiDuha.TextLargeWhite" parent="@style/HnutiDuha.TextMediumWhite">
+        <item name="android:textSize">20sp</item>
+    </style>
+
     <style name="HnutiDuha.HeaderLargeWhite" parent="@style/HnutiDuha.HeaderMediumWhite">
         <item name="android:textSize">20sp</item>
     </style>
